--- a/about.html
+++ b/about.html
@@ -506,7 +506,7 @@
                     <p>المؤسسة والمديرة التنفيذية</p>
                 </div>
                 <div class="member-info">
-                    <p>طالبة علوم الحاسوب، مؤسسة المكتبة ومسؤول عن التطوير التقني والتخطيط الاستراتيجي.</p>
+                    <p>طالبة علوم الحاسوب، مؤسسة المكتبة ومسؤولة عن التطوير التقني والتخطيط الاستراتيجي.</p>
                     <p><strong>📧 البريد:</strong> mina@minalibrary.com</p>
                 </div>
             </div>
@@ -623,4 +623,5 @@
     </footer>
 
 </body>
+
 </html>
